--- a/laravel/docker-compose.cloudbuild.yaml
+++ b/laravel/docker-compose.cloudbuild.yaml
@@ -21,10 +21,10 @@ services:
     nginx: 
         build: .docker/nginx
         container_name: nginx
-        entrypoint: dockerize -template /var/www/.docker/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf nginx -g 'daemon off;'
-        environment:
-          - NGINX_HOST=app
-          - NGINX_PORT=9000        
+        # entrypoint: dockerize -template /var/www/.docker/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf nginx -g 'daemon off;'
+        # environment:
+        #   - NGINX_HOST=app
+        #   - NGINX_PORT=9000        
         restart: always
         tty: true
         ports:
