--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -18,7 +18,10 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
+NGINX_HOST=app
+NGINX_PORT=9000
+
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
